src/test/compile-fail/import-glob-rename.rs
// error-pattern:expected

use baz = foo::*;

mod foo {
    #[legacy_exports];
    fn bar() {}
}

fn main() {
}